--- a/UNO/UNO.csproj
+++ b/UNO/UNO.csproj
@@ -61,9 +61,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
+    <Compile Include="Cards\Card.cs" />
     <Compile Include="CardDesk.cs" />
     <Compile Include="CardSet.cs" />
+    <Compile Include="Cards\ColorFunctionCard.cs" />
     <Compile Include="Extantions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -71,6 +72,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Cards\FunctionCard.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GraphicCard.cs" />
     <Compile Include="GraphicCardSet.cs" />
@@ -78,6 +80,7 @@
     <Compile Include="PlayerTurn.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Cards\ValueCard.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
