--- a/UNO/UNO.csproj
+++ b/UNO/UNO.csproj
@@ -150,6 +150,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Cards\FunctionCard.cs" />
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Game.cs" />
     <Compile Include="GraphicCardSet.cs" />
     <Compile Include="Player.cs" />
