--- a/UNO/UNO.csproj
+++ b/UNO/UNO.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Cards\GraphicValueCard.cs" />
     <Compile Include="Cards\IColor.cs" />
     <Compile Include="Cards\IColorFunction.cs" />
+    <Compile Include="Cards\IFigure.cs" />
     <Compile Include="Cards\IFunctional.cs" />
     <Compile Include="Cards\IGraphics.cs" />
     <Compile Include="Extantions.cs" />
@@ -150,6 +151,12 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Cards\FunctionCard.cs" />
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Game.cs" />
     <Compile Include="GraphicCardSet.cs" />
     <Compile Include="Player.cs" />
@@ -158,6 +165,9 @@
     <Compile Include="Cards\ValueCard.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
