--- a/UNO/UNO.csproj
+++ b/UNO/UNO.csproj
@@ -143,6 +143,12 @@
     <Compile Include="Cards\IFigure.cs" />
     <Compile Include="Cards\IFunctional.cs" />
     <Compile Include="Cards\IGraphics.cs" />
+    <Compile Include="Cards\ColorChooser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Cards\ColorChooser.Designer.cs">
+      <DependentUpon>ColorChooser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Extantions.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -163,6 +169,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Cards\ValueCard.cs" />
+    <EmbeddedResource Include="Cards\ColorChooser.resx">
+      <DependentUpon>ColorChooser.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
